# gamemaster-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: CLIENT_END_TO_END_FLOW.md  CLIENT_TOOL_FLOW.md  LONG_LIVED_SESSION.md  PER_GAME_FAISS_INDEX.md
docs/images/: ask_user_clarification.md  diagrams.excalidraw
planning/: ADD_INGEST.md  AGENT_AS_MCP_CLIENT.md  AGENT_CLI_UX_POLISH.md  POLISH.md  PROJECT_BRIEF.md  scratch.md
src/gamemaster_mcp/: config.py
src/gamemaster_mcp/agent/: __init__.py  llm_base.py  llm_openai.py  mcp_client.py  prompts.py  runner.py
src/gamemaster_mcp/cli/: __init__.py  agent.py  ingest.py
src/gamemaster_mcp/index/: __init__.py  dense_index.py  rerank.py  sparse_fts.py
src/gamemaster_mcp/ingest/: __init__.py  chunking.py  normalize.py  path_validate.py  pdf_extract.py  run.py
src/gamemaster_mcp/mcp_server/: __init__.py  instructions.py  resources.py  server.py  tool_logging.py  tools_answer.py  tools_clarification.py  tools_ingest.py  tools_search.py  validation.py
src/gamemaster_mcp/search/: __init__.py  pipeline.py
src/gamemaster_mcp/storage/: __init__.py  schema.py  source_id.py  sqlite_store.py
